2008-06-30  Stipe Tolj  <stolj at kannel.org>
    * test/test_urltrans.c: fix compiler warning. NLC.

2008-06-24  Stipe Tolj  <stolj at kannel.org>
    * Makefile.in: add 'datarootdir' reference which is required for
      autoconf 2.60 (and higher) output files.
      
2008-06-24  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: fix shell unary expression error. NLC.
    
2008-06-24  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: fix [] bracked output, and change --with-sqlite to
      --with-sqlite2 to make the difference to more recent sqlite3 version
      clear.
      
2008-06-24  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_at.c: fix compiler warnings. NLC.
    
2008-06-24 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/smsbox.c, gw/urltrans.[ch], 
      test/test_urltrans.c: convert keyword handling to use regex and allow 
      keyword-regex to match the whole msg body instead of only the first 
      word. This patch doesn't change behaviour of keyword handling except 
      keyword-regex now match whole message body. Additionaly, this patch 
      adds escape code '%O' for DCS because it make sense to have DCS as 
      whole instead of splitted into fields.

2008-06-24  Andreas Fink  <andreas at fink.org>
    * gw/smsc/smsc_at.c: support for protocol type = telnet
      compared to rawtcp it does interpret telnet escape sequences.
      Also supports specifying smsc-username / smsc-password to log in
      on the access server. New params are login-prompt and password-prompt

2008-06-13  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: fix possible assertion check panic while calling
      octstr_get_char() on the source_addr field, which may be NULL according
      to SMPP v3.4 specs.

2008-06-09 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_emi.c: fixed name issue when we use alternate host/port.